--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>TravelBloom</title>
 </head>
 <body>
-    <div>
+    <div class="content-wrapper">
         <nav>
             <a class="logo-link" href="./index.html">
                 <img src="./img/logo.jpg" alt="" height="50px" width="50px"/><h1>TravelBloom</h1>
@@ -22,15 +22,15 @@
                 <button type="button" onclick="showResults()" id='btnSearch'>Search</button>&nbsp<button type="button" onclick="clearSearch()" id='btnClear'>Clear</button>
             </div>
         </nav>
-    </div>
 
-    <div class="home-container">
-        <div class="vertical-line"></div>
-        <div class="content">
-            <h1>WELCOME TO TRAVELBLOOM</h1>
-            <p>Your ultimate travel companion. Discover new destinations, plan your trips, and explore the world with us. Join us on an adventure of a lifetime and make unforgettable memories.</p>
+        <div class="content-container">
+            <div class="content">
+                <h1>WELCOME TO TRAVELBLOOM</h1>
+                <p>Your ultimate travel companion. Discover new destinations, plan your trips, and explore the world with us. Join us on an adventure of a lifetime and make unforgettable memories.</p>
+            </div>
         </div>
         <div class="results-container" id="results" style="visibility: hidden;">
+            
         </div>
     </div>
 
